@@ -22,6 +22,13 @@ class Insert(models.Model):
 class Node(models.Model):
     parent = models.ForeignKey('self', null=True, blank=True, related_name='children')
 
+class OrderedInsertion(models.Model):
+    name = models.CharField(max_length=50)
+    parent = models.ForeignKey('self', null=True, blank=True, related_name='children')
+
+    def __unicode__(self):
+        return self.name
+
 class Tree(models.Model):
     parent = models.ForeignKey('self', null=True, blank=True, related_name='children')
 
@@ -30,4 +37,5 @@ mptt.register(Genre)
 mptt.register(Insert)
 mptt.register(Node, left_attr='does', right_attr='zis', level_attr='madness',
               tree_id_attr='work')
+mptt.register(OrderedInsertion, order_insertion_by='name')
 mptt.register(Tree)
